# robotics

src/aruco_markers/aruco_markers/config/: aruco_params.yaml  aruco_parms.yaml
src/aruco_markers/aruco_markers/launch/: aruco_4cam.launch.py  aruco_launch.py
src/aruco_markers/aruco_markers/src/: aruco_markers.cpp
src/detector/: package.xml  readme.md  setup.py
src/detector/detector/: color.py
src/detector/install/: local_setup.sh  setup.sh
src/detector/install/detector/lib/detector/: detect_node
src/detector/install/detector/share/detector/: package.sh
src/detector/log/: latest_build
src/joy_control/: CMakeLists.txt  package.xml
src/joy_control/src/: joy_control_node.cpp
src/nav_stack/: CMakeLists.txt  package.xml
src/nav_stack/behaviour_trees/: multi_camera_navigation.xml
src/nav_stack/config/: nav2_params.yaml  nv2_params.yaml
src/nav_stack/launch/: main.launch.py  min.launch.py  nav_slam.launch.py  nv_slam.launch.py  rtab.launch.py  rtabmap.launch.py  topic_relay.launch.py
src/nav_stack/src/: aruco_nav_goal.py  buffer.py  monitor_node.py  pc2_stablize.py  pose_map.py  topic_remapper.py
